...
    android:padding="@dimen/margin"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/weight_ET"
        android:layout_width="@dimen/match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weight_hint"
        android:inputType="number"
        android:maxLength="3"
...
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/weight_ET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weight_ET" />

    <EditText
        android:id="@+id/height_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:ems="10"
        android:hint="@string/height_hint"
        android:inputType="number"
...
